src/app/presentation/presentation.component.css
#presentationBck{
    background-color: #a6c280;
    position: absolute;
    top: max(100vh, 1200px);
    left: 0;
}
#myProjects{
    float: left;
    margin-top: 40vh;
    margin-left: 10vw;
    font-family: 'lato';
    width: auto;
    font-size: 20vh;
    color: white;
}
#endingPage {
    float: left;
    height: 100vh;
    width: 100%;
    background-color: white;
}

